# appian-deployment-mcp

./: .gitignore  README.md  package.sh  pyproject.toml  setup.sh
.kiro/hooks/: appian-deployment-docs.kiro.hook
.kiro/specs/appian-deployment-mcp/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: appian-deployment-api.md
src/appian_deployment_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  keychain.py  server.py
src/appian_deployment_mcp/pipeline/: __init__.py  engine.py  models.py  store.py  validation.py
src/appian_deployment_mcp/tools/: __init__.py  deploy_from_export.py  deployment_review.py  deployments.py  downloads.py  environments.py  exports.py  inspections.py  packages.py  pipeline_approvals.py  pipeline_definitions.py  pipeline_runs.py  polling.py
tests/: conftest.py  test_backward_compat.py  test_client.py  test_config.py  test_errors.py  test_pipeline_approval_non_awaiting.py  test_pipeline_cancel_terminal.py  test_pipeline_engine.py  test_pipeline_errors.py  test_pipeline_integration.py  test_pipeline_models.py  test_pipeline_nonexistent_lookup.py  test_pipeline_rejection_reason.py  test_pipeline_rejection_records_reason.py  test_pipeline_run_errors.py  test_pipeline_status_response.py  test_pipeline_store.py  test_pipeline_store_properties.py  test_pipeline_tools.py  test_pipeline_validation.py  test_server_wiring.py  test_tools_deployments.py  test_tools_downloads.py  test_tools_environments.py  test_tools_exports.py  test_tools_inspections.py  test_tools_packages.py  test_tools_polling.py
